feat: initialize placement portal project with full stack architecture and authentication system